--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Mon Feb 11 18:21:13 CET 2013
+#Thu Feb 14 14:39:04 CET 2013
 app.grails.version=2.2.0
 app.name=be.arexo.chat
 app.version=0.1
+plugins.maprest=0.1.0
